|(fix:component) fix navbar bug
    the problem was that when it was in which section of the page it was in, a smaller number was returned, i.e. if it was in section 2, it returned position 1.

    caused by this constant :
        const numberOfSection = Math.round(scrollLeft / clientWidth) + 1;
    That comes from the values of the horizontal scroll divided by the width of the screen, when rounding the value was always smaller.
    That is to say if we have a screen of 500 of width and 4 sections, the total of the width of these sections horizontally navigable is 2000.
    If we are in the section 1, that its range is from 0 to 500 (or the width of the screen), in this case if we are within the range that is to say in about 120, the division of 120/500= 0.24, rounded happens to 0, and we are not in the position 0 but in 1, that is why the resulting value is added 1.

--- a/components/SectionWrapper/wrapper.module.css
+++ b/components/SectionWrapper/wrapper.module.css
@@ -1,12 +1,19 @@
 .section{
     width: 85vw;
-    height: 400px;
+    height: 200px;
     background-color: red;
+    scroll-snap-align: center;
 }
 .carrousel{
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 100% );
+    grid-gap: 0;
+    grid-template-columns: repeat(4, 85vw );
     overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    overscroll-behavior-x: contain;
+
+
 }
 .carrousel section:nth-child(1){
     background-color: blue;
@@ -15,8 +22,18 @@
     background-color: green;
 }
 .carrousel section:nth-child(3){
-    background-color: yellow;
+    background-color: rgb(7, 71, 36);
 }
 .carrousel section:nth-child(4){
     background-color: tomato;
+}
+
+@media screen and (max-width: 560px) {
+    .section{
+        width: calc(100vw - 48px);
+        background-color: red;
+    }
+    .carrousel{
+        grid-template-columns: repeat(4, calc(100vw - 48px) );
+    }
 }
